# kaiidth

./: .gitignore  CMakeLists.txt  README.md
shaders/: 001_triangle.frag.glsl  001_triangle.vert.glsl  compile_shaders.py
src/: base.cpp  base.hpp  helpers.cpp  helpers.hpp  log.hpp  main.cpp  pipeline.cpp  pipeline.hpp
src/example/: helloworld.hpp
